syntax = "proto3";
package story.dkg.v1.types;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "story/dkg/v1/types/params.proto";
import "story/dkg/v1/types/types.proto";

option go_package = "github.com/piplabs/story/client/x/dkg/types";

// Query defines the gRPC querier service.
service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/story/dkg/v1/params";
  }

  rpc GetDKGNetwork(QueryGetDKGNetworkRequest) returns (QueryGetDKGNetworkResponse) {
    option (google.api.http).get = "/story/dkg/v1/network/{round}/{code_commitment_hex}";
  }

  rpc GetLatestDKGNetwork(QueryGetLatestDKGNetworkRequest) returns (QueryGetLatestDKGNetworkResponse) {
    option (google.api.http).get = "/story/dkg/v1/latest_network";
  }

  rpc GetAllDKGNetworks(QueryGetAllDKGNetworksRequest) returns (QueryGetAllDKGNetworksResponse) {
    option (google.api.http).get = "/story/dkg/v1/networks";
  }

  rpc GetDKGRegistration(QueryGetDKGRegistrationRequest) returns (QueryGetDKGRegistrationResponse) {
    option (google.api.http).get = "/story/dkg/v1/registration/{round}/{code_commitment_hex}/{validator_address}";
  }

  rpc GetAllDKGRegistrations(QueryGetAllDKGRegistrationsRequest) returns (QueryGetAllDKGRegistrationsResponse) {
    option (google.api.http).get = "/story/dkg/v1/registrations/{round}/{code_commitment_hex}";
  }

  rpc GetAllVerifiedDKGRegistrations(QueryGetAllVerifiedDKGRegistrationsRequest) returns (QueryGetAllVerifiedDKGRegistrationsResponse) {
    option (google.api.http).get = "/story/dkg/v1/verified_registrations/{round}/{code_commitment_hex}";
  }

  rpc GetLatestActiveDKGNetwork(QueryGetLatestActiveDKGNetworkRequest) returns (QueryGetLatestActiveDKGNetworkResponse) {
    option (google.api.http).get = "/story/dkg/v1/latest_active";
  }
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetDKGNetworkRequest {
  uint32 round = 1 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  string code_commitment_hex = 2 [
    (gogoproto.moretags) = "yaml:\"code_commitment_hex\""
  ];
}

message QueryGetDKGNetworkResponse {
  DKGNetwork network = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"network\""
  ];
}

message QueryGetLatestDKGNetworkRequest {}

message QueryGetLatestDKGNetworkResponse {
  DKGNetwork network = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"network\""
  ];
}

message QueryGetAllDKGNetworksRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryGetAllDKGNetworksResponse {
  repeated DKGNetwork networks = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"networks\""
  ];

  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetDKGRegistrationRequest {
  uint32 round = 1 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  string code_commitment_hex = 2 [
    (gogoproto.moretags) = "yaml:\"code_commitment_hex\""
  ];

  string validator_address = 3 [
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];
}

message QueryGetDKGRegistrationResponse {
  DKGRegistration registration = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"registration\""
  ];
}

message QueryGetAllDKGRegistrationsRequest {
  uint32 round = 1 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  string code_commitment_hex = 2 [
    (gogoproto.moretags) = "yaml:\"code_commitment_hex\""
  ];

  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message QueryGetAllDKGRegistrationsResponse {
  repeated DKGRegistration registrations = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"registrations\""
  ];

  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetAllVerifiedDKGRegistrationsRequest {
  uint32 round = 1 [
    (gogoproto.moretags) = "yaml:\"round\""
  ];

  string code_commitment_hex = 2 [
    (gogoproto.moretags) = "yaml:\"code_commitment_hex\""
  ];
}

message QueryGetAllVerifiedDKGRegistrationsResponse {
  repeated DKGRegistration registrations = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"registrations\""
  ];
}

message QueryGetLatestActiveDKGNetworkRequest {}

message QueryGetLatestActiveDKGNetworkResponse {
  types.DKGNetwork network = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"network\""
  ];
}